# pypicloud

./: .bumpversion.cfg  .devbox.conf  .dockerignore  .noserc  Dockerfile  compose  config.ini  pyproject.toml
.github/workflows/: tests.yml
doc/topics/: storage.rst
docker/: Dockerfile
pypicloud/: __init__.py  scripts.py
pypicloud/access/: sql.py
pypicloud/templates/: config.ini.jinja2
tests/: __init__.py  test_api.py  test_storage.py
tests/integration/: config.ini  docker-compose.yml
